# esp32c3-vgaterm

./: .screenrc  Cargo.toml  LICENSE  README.md  default.dwf3logic  default.dwf3work  draw_perf.md  parts.md  rust-toolchain.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: cargo.yml  ci.yml  fixup.yml
examples/: escape_seq.rs  gpio_interrupt.rs  nested_interrupt.rs  ram.rs  serial_interrupt.rs  spi_dma_loopback.rs  timer_interrupt.rs
src/: album.rs  ansi.rs  channel.rs  color.rs  display.rs  gpio.rs  interrupt.rs  kernel.rs  keyboard.rs  keymap.rs  lib.rs  life.rs  main.rs  perf.rs  println.rs  ps2_keyboard.rs  spi.rs  terminal.rs  terminal_input.rs  text.rs  timer.rs  uart.rs  usb_keyboard.rs  video.rs
src/lds/: db-esp32c3-link.x  hal-defaults.x
