[package]
name = "vgaterm"
version = "0.1.0"
authors = ["dougli1sqrd, sethp"]
edition = "2021"
keywords = ["embedded", "esp32c3", "riscv", "terminal"]
repository = "https://github.com/rustbox/vgaterm"
license = "MIT"
readme = "README.md"

[lib]
name = "vgaterm"
path = "src/lib.rs"

[[bin]]
name = "vgaterm"
path = "src/main.rs"

[profile.release]
opt-level = 2

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[dependencies]
# panic-halt = "0.2"
embedded-hal = "0.2"
critical-section = "1.1.1"
esp-hal-common = { git = "https://github.com/esp-rs/esp-hal", features = ["esp32c3"], rev = "d29c4b1" }
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["direct-boot"], rev = "d29c4b1" }
riscv = "0.10.0"
riscv-rt = "0.11.0"
nb = "1.0"
bare-metal = "1.0.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
fugit = "0.3.6"
unroll = "0.1.5"
esp-println       = { version = "0.3.1", features = ["esp32c3"] }

[dev-dependencies]
esp-backtrace     = { version = "0.4.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }

