[package]
name       = "vgaterm"
version    = "0.1.0"
authors    = ["dougli1sqrd, sethp"]
edition    = "2021"
keywords   = ["embedded", "esp32c3", "riscv", "terminal"]
repository = "https://github.com/rustbox/vgaterm"
license    = "MIT"
readme     = "README.md"

[lib]
name  = "vgaterm"
test  = false
bench = false
path  = "src/lib.rs"

[[bin]]
name  = "vgaterm"
test  = false
bench = false
path  = "src/bin/vgaterm.rs"

[[bin]]
name  = "keypad"
test  = false
bench = false
path  = "src/bin/keypad.rs"

[profile.release]
opt-level = 2

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[dependencies]
bitflags = "1.3.2"
bitmap-font = "0.2.2"
critical-section = "1.1.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
esp32c3-hal = { features = [
  "direct-boot",
], version = "*" }
fixedbitset = { version = "0.4.2", default-features = false }
fugit = "0.3.6"
nb = "1.0"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
riscv = "0.10.0"
unroll = "0.1.5"

[dev-dependencies]
esp-backtrace = { version = "0.4.0", features = [
  "esp32c3",
  "panic-handler",
  "exception-handler",
  "print-uart",
] }


[patch.crates-io]
# TODO: automate these updates
esp32c3-hal    = { git = "https://github.com/rustbox/esp-hal", rev = "613f96d" }
esp-hal-common = { git = "https://github.com/rustbox/esp-hal", rev = "613f96d" }
